# ine5420

./: CONTRIBUTING.md  Makefile  README.md  TODO.md  pyproject.toml
examples/: example.mtl
ine5420/: main.py  transform.py
qt_designer_checkpoints/: 01_only_lines_allowed.ui
src/: __main__.py  clipping.py  config.py  main_window.py  math_functions.py  new_wireframe_window.py  obj_handler.py  transform_window.py  wireframe.py
src/qt_designer/: old_main_window_only_lines_allowed.ui
tests/: test_ine5420.py
